--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.21",
     "decap-cms-app": "^3.7.2",
     "gray-matter": "^4.0.3",
+    "minecraft-protocol": "^1.58.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
