--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/typography": "^0.5.16",
-    "autoprefixer": "^10.4.21",
     "decap-cms-app": "^3.7.2",
     "gray-matter": "^4.0.3",
     "minecraft-protocol": "^1.58.0",
@@ -31,9 +30,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
