--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "remark-rehype": "^11.1.2",
+    "remark-slug": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
