--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/typography": "^0.5.16",
     "html-react-parser": "^5.2.10",
+    "minecraft-server-util": "^5.4.4",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
